@@ -32,3 +32,6 @@ If I click on "Czars in Russia", I'd like Ikiwiki to create "Czars\_in\_Russia.m
 > Then, which one is the default wouldn't much matter. (The non-lower cased
 > one would probably be the best choice.) --[[Joey]]
 >> Either of your proposed solutions (make it the default or include both in the pop-up menu) sounds fine to me.  Which one is easier? :) --[[sabr]]
+
+>>> [[Done]]; it now defaults to the mixed case title and provides
+>>> the lower-case one as an option in the select box. --[[Joey]] 
