@@ -19,6 +19,9 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
     page by simply linking to them, or by using the img directive.
     Note that sanitizing svg files is still not addressed.
   * img: Generate png format thumbnails for svg images.
+  * Preserve mixed case in page creation links, and when creating a page
+    whose title is mixed case, allow selecting between the mixed case and
+    all lower-case names.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
